0011703: Word Wrapping Issue in Recent Activity Tab

--- a/src/container/NewDashboardLayout/RecentActivity/RecentActivity.module.css
+++ b/src/container/NewDashboardLayout/RecentActivity/RecentActivity.module.css
@@ -24,6 +24,7 @@
   align-items: center !important;
   gap: 10px !important;
   max-width: 95% !important;
-  white-space: break-spaces !important;
-  word-break: break-all;
+  white-space: normal !important;
+  word-break: normal !important;
+  overflow-wrap: break-word;
 }
